TMForumHackathon/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>TMF_Category__c</fullName>
        <description>TMFORUM: Used to categorise a quote from a business perspective that can be useful for a CRM system (i.e. Corporate, Residential)</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMF_Completion_Date__c</fullName>
        <description>TMFORUM: initial quote required by date from the requestor perspective</description>
        <inlineHelpText>initial quote required by date from the requestor perspective</inlineHelpText>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TMF_Effective_Completion_Date__c</fullName>
        <description>TMFORUM: Date when the quoted was Cancelled or Rejected or Accepted</description>
        <inlineHelpText>Date when the quoted was Cancelled or Rejected or Accepted</inlineHelpText>
        <label>Effective Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TMF_External_ID__c</fullName>
        <description>TMFORUM: ID given by the consumer and only understandable by them (to facilitate 3rd party searches)</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMF_Valid_From__c</fullName>
        <description>TMFORUM: Quote valid from date</description>
        <inlineHelpText>Quote Valid From Date</inlineHelpText>
        <label>Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TMF_Version__c</fullName>
        <description>TMFORUM: Quote version because if the customer rejected the quote but negotiations still open a new version of the quote is managed</description>
        <label>Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>